--- a/libros-server/libros-api/pom.xml
+++ b/libros-server/libros-api/pom.xml
@@ -33,6 +33,11 @@
       <artifactId>jersey-container-servlet-core</artifactId>
     </dependency>
     <dependency>
+			<groupId>org.glassfish.jersey.media</groupId>
+			<artifactId>jersey-media-moxy</artifactId>
+			<version>2.3.1</version>
+		</dependency>
+    <dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.26</version>
