--- a/libros-server/libros-api/src/main/webapp/WEB-INF/web.xml
+++ b/libros-server/libros-api/src/main/webapp/WEB-INF/web.xml
@@ -96,6 +96,9 @@
 			<web-resource-name>Libros-registered</web-resource-name>
 			<url-pattern>/libros/*</url-pattern>
 			<http-method>GET</http-method>
+			<http-method>PUT</http-method>
+			<http-method>DELETE</http-method>
+			<http-method>POST</http-method>
 		</web-resource-collection>
 		<auth-constraint>
 			<role-name>registered</role-name>
